Fix plus sign getting cut off on iphone & apple devices.
NO NEGATIGE MARGINS. BAD. VERY BAD.

--- a/assets/scss/1-base/_buttons.scss
+++ b/assets/scss/1-base/_buttons.scss
@@ -22,7 +22,6 @@
   font-weight: $secondaryfont-weight-regular;
   height: 30px;
   line-height: 30px;  // line-height needed to center text vertically
-  margin-left: -20px;
   margin-right: 10px;
   text-decoration: none !important;  // Important needed to overide link underlining behavior
   vertical-align: middle;
