--- a/assets/scss/3-layout/_cards.scss
+++ b/assets/scss/3-layout/_cards.scss
@@ -75,3 +75,7 @@
     padding: 1.25rem;
   }
 }
+
+.cards__card-header--padding-left {
+  padding-left: 0;
+}
